Fixes the title of the cover header being able to overflow the header bounds

--- a/style.css
+++ b/style.css
@@ -3221,10 +3221,6 @@ ul.footer-social li {
 
 	/* Template: Cover Template -------------- */
 
-	.cover-header {
-		height: 60rem;
-	}
-
 	.cover-header-inner {
 		padding: 20rem 0 8rem 0;
 	}
